--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,4 +13,6 @@ steps:
     condition: and(contains(variables['Build.SourceVersionMessage'], 'replicate'), succeeded())
     inputs:
       targetType: 'inline'
-      script: 'echo $(Build.SourceVersionMessage)'
+      script: |
+        echo $(Build.SourceVersionMessage)
+        git branch -a
