Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,4 +15,4 @@ steps:
       targetType: 'inline'
       script: |
         echo $(Build.SourceVersionMessage)
-        git branch -a
+        git fetch --all
