--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,4 +15,4 @@ steps:
       targetType: 'inline'
       script: |
         echo $(Build.SourceVersionMessage)
-        git fetch --all
+        git branch -r 
