--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ steps:
       targetType: 'inline'
       script: |
         echo $(Build.SourceVersionMessage)
+        git config --global user.email "mohamedalaa1@outlook.com"
+        git config --global user.name "Mohamed Alaa"
         git branch -r 
         git checkout origin/a
         git merge master
