--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ steps:
         echo $(Build.SourceVersionMessage)
         git config --global user.email "mohamedalaa1@outlook.com"
         git config --global user.name "Mohamed Alaa"
-        echo $(Build.Repository.Uri)
+        echo 
+        echo $(Build.Repository.Uri) |sed 's/<https://>/&hello@/
         # git branch -r 
         # git checkout origin/a
         # git merge origin/main
