--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,6 @@ steps:
     inputs:
       targetType: 'inline'
       script: |
-        GH_TOKEN=$token
         echo $(Build.SourceVersionMessage)
         git config --global user.email "mohamedalaa1@outlook.com"
         git config --global user.name "Mohamed Alaa"
@@ -22,5 +21,5 @@ steps:
         git checkout origin/a
         git merge origin/main
         git commit -a
-        git push origin HEAD:origin/a
+        git push https://$(token)@github.com/mohamed3laa33/testbranches.git
     
