--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,4 @@ steps:
         git checkout origin/a
         git merge origin/main
         git commit -a
-        git push https://$(token)@github.com/mohamed3laa33/testbranches.git
-    
+        git push https://$(token)@github.com/mohamed3laa33/testbranches.git  HEAD:origin/a
