--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
         git config --global user.email "mohamedalaa1@outlook.com"
         git config --global user.name "Mohamed Alaa"
         Branches=$(git branch -r | cut -d '/' -f 2)
-        for Branch in Branches
+        for Branch in $Branches
         do
           git checkout $Branch
           git merge origin/main
