--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,8 +24,12 @@ steps:
           git cherry-pick  $latestCommit --strategy-option theirs
           git push https://$(token)@github.com/mohamed3laa33/testbranches.git  HEAD:$Branch
         done
-
-
-
+  - task: Bash@3
+    inputs:
+      targetType: 'inline'
+      script: |
+        # Write your commands here
+        
+        echo 'Hello world'
 
 
