--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,4 +24,18 @@ steps:
           git commit -a
           git push https://$(token)@github.com/mohamed3laa33/testbranches.git  HEAD:$Branch
         done
+  - task: Bash@3
+    inputs:
+      targetType: 'inline'
+      script: |
+        # Write your commands here
+        
+        echo 'Hello world'
+  - task: Bash@3
+    inputs:
+      targetType: 'inline'
+      script: |
+        # Write your commands here
+        
+        echo 'Hello world replicate'
 
