Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,13 +29,11 @@ steps:
       targetType: 'inline'
       script: |
         # Write your commands here
-        
         echo 'Hello world'
   - task: Bash@3
     inputs:
       targetType: 'inline'
       script: |
         # Write your commands here
-        
-        echo 'Hello world replicate'
+        echo 'Hello world a'
 
