--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,5 +35,5 @@ steps:
       targetType: 'inline'
       script: |
         # Write your commands here
-        echo 'Hello world replicate'
-
+        
+        echo 'Hello world replicate replication'
