--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'ubuntu-latest'
 steps:
   - task: Bash@3
-    condition: and(contains(variables['Build.SourceVersionMessage'], 'replicate'), succeeded())
+    condition: and(and(contains(variables['Build.SourceVersionMessage'], 'replicate'), succeeded()), and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main')))
     inputs:
       targetType: 'inline'
       script: |
